new div element to portfolio section

--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
             <h2>Portfólió</h2>
             <p>A teljesség igénye nélkül néhány projektem.</p>
           </div>
+          <div class="section-title">
+            <h2>Portfólió</h2>
+            <p>A teljesség igénye nélkül néhány projektem.</p>
+          </div>
           <div class="portfolio-card-container">
             <a href="#l-box1"
               ><div class="p-card">
