--- a/index.html
+++ b/index.html
@@ -269,6 +269,9 @@
             <a href="#"
               ><img src="assets/images/partners-badge4.png" alt="logo img"
             /></a>
+            <a href="#"
+              ><img src="assets/images/partners-badge4.png" alt="logo img"
+            /></a>
           </div>
         </div>
       </section>
