--- a/index.html
+++ b/index.html
@@ -443,6 +443,9 @@
         <a href="#"
           ><img src="assets/images/discord-logo.svg" alt="social icon"
         /></a>
+        <a href="#"
+          ><img src="assets/images/discord-logo.svg" alt="social icon"
+        /></a>
       </div>
 
       <div class="policies">
