add elemets to footer

--- a/index.html
+++ b/index.html
@@ -438,6 +438,9 @@
           ><img src="assets/images/facebook-logo.svg" alt="social icon"
         /></a>
         <a href="#"
+          ><img src="assets/images/facebook-logo.svg" alt="social icon"
+        /></a>
+        <a href="#"
           ><img src="assets/images/github-logo.svg" alt="social icon"
         /></a>
         <a href="#"
@@ -451,6 +454,7 @@
       <div class="policies">
         <a href="#">impresszum</a>
         <a href="#">adatkezelési tájékoztató</a>
+        <a href="#">cookie policy</a>
         <a href="#">cookie policy</a>
       </div>
     </footer>
