--- a/index.html
+++ b/index.html
@@ -450,6 +450,7 @@
 
       <div class="policies">
         <a href="#">impresszum</a>
+        <a href="#">impresszum</a>
         <a href="#">adatkezelési tájékoztató</a>
         <a href="#">cookie policy</a>
       </div>
